@@ -413,3 +413,10 @@ th {
   opacity: 0.5;
   transition: opacity 0.15s ease-in;
 }
+
+
+/* gradient */
+body {
+  background: linear-gradient(90deg, #dbdef3,
+  #ffffff);
+}
