@@ -6,82 +6,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>20220718</title>
     <link rel="stylesheet" href="./css/spux.css" />
-    <script type="application/json" id="data">{
-  "@id": "",
-  "birth": "1658096089",
-  "energy": 98620,
-  "address": "bQY6R6UkJiejgh5P49sibr5EXZJSgL27kr",
-  "gitmark": {
-    "@id": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
-    "genesis": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
-    "nick": "melbot_20220718",
-    "package": "./package.json",
-    "repository": "./"
-  },
-  "mainEntity": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
-  "bookmark": [
-    {
-      "@id": "https://www.reddit.com/r/EarthPorn/comments/w1263v/the_waterfall_h%C3%A4llings%C3%A5fallet_discharges_into_the/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/1lt2izdx33c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/EarthPorn/comments/w19c9g/9am_yosemite_ca_oc_2901x3868/",
-      "@type": "ImageObject",
-      "image": "https://i.imgur.com/SzLmS14.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/EarthPorn/comments/w15bsh/matterhorn_and_its_reflection_at_sunrise/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/6oq11sol54c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/SkyPorn/comments/w174sv/finnish_summer_night/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/zcjll8mno4c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/SkyPorn/comments/w1fjv8/sunset_along_the_south_texas_coast/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/dbo72g9xl6c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/SkyPorn/comments/w0sv9q/i_chased_storm_in_wyoming_yesterday_and_captured/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/hcwn4lg1h0c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/SkyPorn/comments/w0f7qy/colours_of_the_sky/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/942uzdtg8xb91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/itookapicture/comments/w15zoy/itap_of_a_baby_turtle_at_sunset/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/xsxrpheoc4c91.jpg"
-    },
-    {
-      "@id": "https://www.reddit.com/r/itookapicture/comments/w1cs35/itap_of_a_stag_at_sunset/",
-      "@type": "ImageObject",
-      "image": "https://i.redd.it/i8bf4fo306c91.jpg"
-    }
-  ],
-  "previous": "../melbot_20220717/",
-  "next": "../melbot_20220719/",
-  "nostrkey": "5c6fe59d786d881fd802f008a260ebb5367cd8b0049e7dbd5679588162444e88",
-  "relay": "ws://nostr.rocks:1617"
-}</script>
+    <script type="application/json" id="data">
+      {
+        "@id": "",
+        "mainEntity": {
+          "@id": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
+          "@type": "Agent",
+          "birth": 1658096089,
+          "energy": 98620,
+          "nostr": "5c6fe59d786d881fd802f008a260ebb5367cd8b0049e7dbd5679588162444e88",
+          "address": "bQY6R6UkJiejgh5P49sibr5EXZJSgL27kr",
+          "gitmark": {
+            "@id": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
+            "genesis": "gitmark:7f87e1f58b659961519db2cf4e33f27c13186c5fc5962c2aa37d4d21adf3977b:0",
+            "nick": "melbot_20220718",
+            "package": "./package.json",
+            "repository": "./"
+          }
+        },
+        "bookmark": [
+          {
+            "@id": "https://www.reddit.com/r/EarthPorn/comments/w1263v/the_waterfall_h%C3%A4llings%C3%A5fallet_discharges_into_the/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/1lt2izdx33c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/EarthPorn/comments/w19c9g/9am_yosemite_ca_oc_2901x3868/",
+            "@type": "ImageObject",
+            "image": "https://i.imgur.com/SzLmS14.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/EarthPorn/comments/w15bsh/matterhorn_and_its_reflection_at_sunrise/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/6oq11sol54c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/SkyPorn/comments/w174sv/finnish_summer_night/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/zcjll8mno4c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/SkyPorn/comments/w1fjv8/sunset_along_the_south_texas_coast/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/dbo72g9xl6c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/SkyPorn/comments/w0sv9q/i_chased_storm_in_wyoming_yesterday_and_captured/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/hcwn4lg1h0c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/SkyPorn/comments/w0f7qy/colours_of_the_sky/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/942uzdtg8xb91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/itookapicture/comments/w15zoy/itap_of_a_baby_turtle_at_sunset/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/xsxrpheoc4c91.jpg"
+          },
+          {
+            "@id": "https://www.reddit.com/r/itookapicture/comments/w1cs35/itap_of_a_stag_at_sunset/",
+            "@type": "ImageObject",
+            "image": "https://i.redd.it/i8bf4fo306c91.jpg"
+          }
+        ],
+        "previous": "../melbot_20220717/",
+        "next": "../melbot_20220719/",
+        "relay": "ws://nostr.rocks:1617"
+      }
+    </script>
 
     <script type="module" src="./js/app.js"></script>
   </head>
   <body></body>
 </html>
-
-
-
-
-
-
-
-
-
