@@ -1,6 +1,6 @@
 {
   "name": "melbot_20220718",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "melbot_20220718",
   "main": "index.js",
   "type": "module",
